samples/_failures_safe/1761723940_fe4a7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94f05bdb.c: In function ‘main’:
./samples/SAFE/__tmp_94f05bdb.c:155:9: error: expected expression at end of input
  155 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_94f05bdb.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94f05bdb.c:155:9: error: expected declaration or statement at end of input
